--- a/carving-lab/exp38-28classes.ipynb
+++ b/carving-lab/exp38-28classes.ipynb
@@ -110,8 +110,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = Trainer(model).train(*rawset.rnd)"
+    "result = Trainer(model).train(*rawset.rnd_split_fraction_by_category(0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(result.history.history['val_categorical_accuracy'], 'o')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
