--- a/carving-lab/exp39-random.ipynb
+++ b/carving-lab/exp39-random.ipynb
@@ -354,7 +354,61 @@
       " 9/10 [==========================>...] - ETA: 0s - loss: 0.2210 - categorical_accuracy: 0.9194 - binary_accuracy: 0.9194{'xls': 9, 'pps': 14, 'dbase3': 11, 'swf': 15, 'sql': 13, 'html': 7, 'ps': 17, 'xml': 18, 'eps': 7, 'kml': 13, 'kmz': 13, 'csv': 8, 'gz': 13, 'f': 13, 'gif': 11, 'rtf': 12, 'jpg': 15, 'ppt': 13, 'doc': 20, 'png': 18, 'dwf': 13, 'txt': 18, 'pptx': 13, 'pdf': 19, 'hlp': 26, 'log': 12, 'wp': 19, 'java': 13}\n",
       "10/10 [==============================] - 8s 818ms/step - loss: 0.2180 - categorical_accuracy: 0.9210 - binary_accuracy: 0.9210 - val_loss: 0.2216 - val_categorical_accuracy: 0.9185 - val_binary_accuracy: 0.9185\n",
       "Epoch 39/10000000\n",
-      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2284 - categorical_accuracy: 0.9089 - binary_accuracy: 0.9089"
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2284 - categorical_accuracy: 0.9089 - binary_accuracy: 0.9089{'xls': 21, 'pps': 19, 'dbase3': 19, 'swf': 13, 'sql': 12, 'html': 14, 'ps': 14, 'xml': 18, 'eps': 18, 'kml': 18, 'kmz': 15, 'csv': 13, 'gz': 19, 'f': 19, 'gif': 19, 'rtf': 13, 'jpg': 19, 'ppt': 19, 'doc': 18, 'png': 9, 'dwf': 17, 'txt': 13, 'pptx': 25, 'pdf': 15, 'hlp': 11, 'log': 14, 'wp': 20, 'java': 19}\n",
+      "10/10 [==============================] - 9s 872ms/step - loss: 0.2318 - categorical_accuracy: 0.9078 - binary_accuracy: 0.9078 - val_loss: 0.2289 - val_categorical_accuracy: 0.9128 - val_binary_accuracy: 0.9128\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 40/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2276 - categorical_accuracy: 0.9172 - binary_accuracy: 0.9172{'xls': 7, 'pps': 13, 'dbase3': 12, 'swf': 13, 'sql': 13, 'html': 13, 'ps': 13, 'xml': 15, 'eps': 12, 'kml': 15, 'kmz': 18, 'csv': 8, 'gz': 7, 'f': 15, 'gif': 13, 'rtf': 19, 'jpg': 19, 'ppt': 11, 'doc': 17, 'png': 17, 'dwf': 13, 'txt': 18, 'pptx': 7, 'pdf': 9, 'hlp': 18, 'log': 15, 'wp': 14, 'java': 11}\n",
+      "10/10 [==============================] - 8s 818ms/step - loss: 0.2278 - categorical_accuracy: 0.9160 - binary_accuracy: 0.9160 - val_loss: 0.2323 - val_categorical_accuracy: 0.9134 - val_binary_accuracy: 0.9134\n",
+      "Epoch 41/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2287 - categorical_accuracy: 0.9156 - binary_accuracy: 0.9156{'xls': 17, 'pps': 13, 'dbase3': 12, 'swf': 13, 'sql': 13, 'html': 12, 'ps': 14, 'xml': 13, 'eps': 11, 'kml': 24, 'kmz': 11, 'csv': 13, 'gz': 18, 'f': 13, 'gif': 11, 'rtf': 15, 'jpg': 11, 'ppt': 14, 'doc': 13, 'png': 12, 'dwf': 13, 'txt': 11, 'pptx': 8, 'pdf': 9, 'hlp': 20, 'log': 17, 'wp': 14, 'java': 19}\n",
+      "10/10 [==============================] - 8s 847ms/step - loss: 0.2255 - categorical_accuracy: 0.9162 - binary_accuracy: 0.9162 - val_loss: 0.2099 - val_categorical_accuracy: 0.9226 - val_binary_accuracy: 0.9226\n",
+      "Epoch 42/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2166 - categorical_accuracy: 0.9192 - binary_accuracy: 0.9192{'xls': 15, 'pps': 8, 'dbase3': 12, 'swf': 13, 'sql': 17, 'html': 14, 'ps': 12, 'xml': 13, 'eps': 12, 'kml': 15, 'kmz': 8, 'csv': 12, 'gz': 17, 'f': 13, 'gif': 13, 'rtf': 11, 'jpg': 11, 'ppt': 14, 'doc': 19, 'png': 19, 'dwf': 14, 'txt': 13, 'pptx': 11, 'pdf': 12, 'hlp': 17, 'log': 8, 'wp': 13, 'java': 23}\n",
+      "10/10 [==============================] - 8s 822ms/step - loss: 0.2166 - categorical_accuracy: 0.9190 - binary_accuracy: 0.9190 - val_loss: 0.2118 - val_categorical_accuracy: 0.9225 - val_binary_accuracy: 0.9225\n",
+      "Epoch 43/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2275 - categorical_accuracy: 0.9144 - binary_accuracy: 0.9144{'xls': 14, 'pps': 13, 'dbase3': 13, 'swf': 9, 'sql': 13, 'html': 18, 'ps': 17, 'xml': 14, 'eps': 18, 'kml': 12, 'kmz': 15, 'csv': 18, 'gz': 13, 'f': 17, 'gif': 19, 'rtf': 17, 'jpg': 17, 'ppt': 12, 'doc': 14, 'png': 15, 'dwf': 14, 'txt': 15, 'pptx': 13, 'pdf': 19, 'hlp': 13, 'log': 13, 'wp': 12, 'java': 13}\n",
+      "10/10 [==============================] - 8s 804ms/step - loss: 0.2262 - categorical_accuracy: 0.9162 - binary_accuracy: 0.9162 - val_loss: 0.2136 - val_categorical_accuracy: 0.9234 - val_binary_accuracy: 0.9234\n",
+      "Epoch 44/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2261 - categorical_accuracy: 0.9142 - binary_accuracy: 0.9142{'xls': 15, 'pps': 14, 'dbase3': 14, 'swf': 15, 'sql': 17, 'html': 13, 'ps': 14, 'xml': 25, 'eps': 17, 'kml': 11, 'kmz': 20, 'csv': 11, 'gz': 13, 'f': 14, 'gif': 11, 'rtf': 12, 'jpg': 15, 'ppt': 13, 'doc': 13, 'png': 12, 'dwf': 18, 'txt': 7, 'pptx': 13, 'pdf': 15, 'hlp': 13, 'log': 13, 'wp': 12, 'java': 20}\n",
+      "10/10 [==============================] - 8s 819ms/step - loss: 0.2254 - categorical_accuracy: 0.9137 - binary_accuracy: 0.9137 - val_loss: 0.2203 - val_categorical_accuracy: 0.9196 - val_binary_accuracy: 0.9196\n",
+      "Epoch 45/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2207 - categorical_accuracy: 0.9153 - binary_accuracy: 0.9153{'xls': 14, 'pps': 13, 'dbase3': 13, 'swf': 19, 'sql': 13, 'html': 19, 'ps': 7, 'xml': 8, 'eps': 18, 'kml': 8, 'kmz': 14, 'csv': 12, 'gz': 13, 'f': 14, 'gif': 15, 'rtf': 11, 'jpg': 17, 'ppt': 20, 'doc': 17, 'png': 15, 'dwf': 11, 'txt': 13, 'pptx': 7, 'pdf': 12, 'hlp': 13, 'log': 11, 'wp': 9, 'java': 15}\n",
+      "10/10 [==============================] - 8s 827ms/step - loss: 0.2193 - categorical_accuracy: 0.9162 - binary_accuracy: 0.9162 - val_loss: 0.2160 - val_categorical_accuracy: 0.9183 - val_binary_accuracy: 0.9183\n",
+      "Epoch 46/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2028 - categorical_accuracy: 0.9256 - binary_accuracy: 0.9256{'xls': 12, 'pps': 15, 'dbase3': 14, 'swf': 13, 'sql': 13, 'html': 13, 'ps': 12, 'xml': 13, 'eps': 12, 'kml': 12, 'kmz': 11, 'csv': 9, 'gz': 17, 'f': 13, 'gif': 13, 'rtf': 15, 'jpg': 13, 'ppt': 9, 'doc': 14, 'png': 14, 'dwf': 12, 'txt': 12, 'pptx': 15, 'pdf': 18, 'hlp': 15, 'log': 12, 'wp': 14, 'java': 12}\n",
+      "10/10 [==============================] - 9s 858ms/step - loss: 0.2023 - categorical_accuracy: 0.9262 - binary_accuracy: 0.9262 - val_loss: 0.2213 - val_categorical_accuracy: 0.9185 - val_binary_accuracy: 0.9185\n",
+      "Epoch 47/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2233 - categorical_accuracy: 0.9144 - binary_accuracy: 0.9144{'xls': 14, 'pps': 18, 'dbase3': 14, 'swf': 13, 'sql': 23, 'html': 23, 'ps': 17, 'xml': 19, 'eps': 14, 'kml': 8, 'kmz': 14, 'csv': 12, 'gz': 9, 'f': 19, 'gif': 11, 'rtf': 24, 'jpg': 18, 'ppt': 15, 'doc': 15, 'png': 17, 'dwf': 21, 'txt': 21, 'pptx': 17, 'pdf': 18, 'hlp': 11, 'log': 17, 'wp': 15, 'java': 20}\n",
+      "10/10 [==============================] - 8s 836ms/step - loss: 0.2209 - categorical_accuracy: 0.9155 - binary_accuracy: 0.9155 - val_loss: 0.2305 - val_categorical_accuracy: 0.9133 - val_binary_accuracy: 0.9133\n",
+      "Epoch 48/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2206 - categorical_accuracy: 0.9186 - binary_accuracy: 0.9186{'xls': 18, 'pps': 13, 'dbase3': 18, 'swf': 17, 'sql': 19, 'html': 19, 'ps': 13, 'xml': 18, 'eps': 13, 'kml': 19, 'kmz': 11, 'csv': 21, 'gz': 15, 'f': 21, 'gif': 13, 'rtf': 15, 'jpg': 17, 'ppt': 18, 'doc': 19, 'png': 14, 'dwf': 11, 'txt': 15, 'pptx': 21, 'pdf': 14, 'hlp': 18, 'log': 15, 'wp': 12, 'java': 13}\n",
+      "10/10 [==============================] - 8s 796ms/step - loss: 0.2198 - categorical_accuracy: 0.9183 - binary_accuracy: 0.9183 - val_loss: 0.2154 - val_categorical_accuracy: 0.9196 - val_binary_accuracy: 0.9196\n",
+      "Epoch 49/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2133 - categorical_accuracy: 0.9228 - binary_accuracy: 0.9228{'xls': 15, 'pps': 9, 'dbase3': 11, 'swf': 13, 'sql': 7, 'html': 12, 'ps': 12, 'xml': 14, 'eps': 8, 'kml': 13, 'kmz': 12, 'csv': 17, 'gz': 13, 'f': 15, 'gif': 12, 'rtf': 8, 'jpg': 14, 'ppt': 9, 'doc': 12, 'png': 13, 'dwf': 9, 'txt': 12, 'pptx': 13, 'pdf': 15, 'hlp': 13, 'log': 9, 'wp': 13, 'java': 5}\n",
+      "10/10 [==============================] - 8s 804ms/step - loss: 0.2118 - categorical_accuracy: 0.9233 - binary_accuracy: 0.9233 - val_loss: 0.2241 - val_categorical_accuracy: 0.9135 - val_binary_accuracy: 0.9135\n",
+      "Epoch 50/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2077 - categorical_accuracy: 0.9211 - binary_accuracy: 0.9211{'xls': 19, 'pps': 19, 'dbase3': 20, 'swf': 13, 'sql': 11, 'html': 15, 'ps': 19, 'xml': 18, 'eps': 14, 'kml': 14, 'kmz': 18, 'csv': 13, 'gz': 24, 'f': 9, 'gif': 15, 'rtf': 12, 'jpg': 14, 'ppt': 13, 'doc': 20, 'png': 14, 'dwf': 13, 'txt': 13, 'pptx': 17, 'pdf': 12, 'hlp': 13, 'log': 13, 'wp': 11, 'java': 17}\n",
+      "10/10 [==============================] - 8s 818ms/step - loss: 0.2073 - categorical_accuracy: 0.9215 - binary_accuracy: 0.9215 - val_loss: 0.2182 - val_categorical_accuracy: 0.9176 - val_binary_accuracy: 0.9176\n",
+      "Epoch 51/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2158 - categorical_accuracy: 0.9217 - binary_accuracy: 0.9217{'xls': 18, 'pps': 11, 'dbase3': 15, 'swf': 17, 'sql': 23, 'html': 20, 'ps': 15, 'xml': 24, 'eps': 12, 'kml': 13, 'kmz': 17, 'csv': 17, 'gz': 14, 'f': 17, 'gif': 26, 'rtf': 15, 'jpg': 13, 'ppt': 23, 'doc': 19, 'png': 14, 'dwf': 21, 'txt': 19, 'pptx': 17, 'pdf': 15, 'hlp': 26, 'log': 15, 'wp': 15, 'java': 13}\n",
+      "10/10 [==============================] - 8s 804ms/step - loss: 0.2138 - categorical_accuracy: 0.9210 - binary_accuracy: 0.9210 - val_loss: 0.2322 - val_categorical_accuracy: 0.9134 - val_binary_accuracy: 0.9134\n",
+      "Epoch 52/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2201 - categorical_accuracy: 0.9194 - binary_accuracy: 0.9194{'xls': 15, 'pps': 11, 'dbase3': 13, 'swf': 11, 'sql': 13, 'html': 11, 'ps': 8, 'xml': 8, 'eps': 8, 'kml': 12, 'kmz': 12, 'csv': 7, 'gz': 12, 'f': 12, 'gif': 9, 'rtf': 11, 'jpg': 14, 'ppt': 15, 'doc': 13, 'png': 14, 'dwf': 9, 'txt': 11, 'pptx': 9, 'pdf': 13, 'hlp': 17, 'log': 11, 'wp': 13, 'java': 7}\n",
+      "10/10 [==============================] - 8s 800ms/step - loss: 0.2218 - categorical_accuracy: 0.9195 - binary_accuracy: 0.9195 - val_loss: 0.2293 - val_categorical_accuracy: 0.9140 - val_binary_accuracy: 0.9140\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 53/10000000\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2138 - categorical_accuracy: 0.9261 - binary_accuracy: 0.9261"
      ]
     }
    ],
